# BedPresence

./: .gitmodules  ADC.cpp  CMakeLists.txt  LICENSE  bit_utils.h  build.sh  mcp356x.h  mcp356x_test.cpp
ADC/: .gitignore  ADC.cpp  CMakeLists.txt  bit_utils.h
PCB/: .gitignore
PCB/adc_board/: adc_board-cache.lib  adc_board.csv  adc_board.html  adc_board.kicad_pcb  adc_board.pro  adc_board.sch  adc_with_amps.sch  bridge_interface.sch  fp-lib-table  sym-lib-table
PCB/bridge_board/: bridge_board-cache.lib  bridge_board.kicad_pcb  bridge_board.pro  bridge_board.sch  fp-lib-table  sym-lib-table
PCB/libraries/54-00177/: 54-00177.dcm  54-00177.lib
PCB/libraries/54-00177.pretty/: 54-00177.kicad_mod
PCB/libraries/Custom_stuff/2x5header.pretty/: PinHeader_2x05_P2.54mm_Vertical_SMD.kicad_mod
PCB/libraries/Custom_stuff/744062006.pretty/: 744062006.kicad_mod
PCB/libraries/Custom_stuff/mounting.pretty/: MountingHole_3.2mm_M3_Pad_Via.kicad_mod
PCB/libraries/Custom_stuff/wifi_connector.pretty/: PinHeader_1x13_P2.54mm_Vertical_SMD_Pin1Left.kicad_mod  (+1 more)
PCB/libraries/MAX4209HAUA/: MAX4209HAUA.lib  SOP65P490X110-8N.kicad_mod
PCB/libraries/MAX6070BAUT33T/: MAX6070BAUT33T.lib  MAX6070BAUT33T.step  SOT95P280X145-6N.kicad_mod
PCB/libraries/TPS62046DGQR/: IC_XTR111AIDGQR.kicad_mod  TPS62046DGQR.lib
PCB/libraries/TSM-107-01-T-SV/: SAMTEC_TSM-107-01-T-SV.kicad_mod  SAMTEC_TSM-107-01-T-SV_THRU.kicad_mod  TSM-107-01-T-SV.lib
PCB/main_board/: adc_board_interface.sch  adc_with_amps.sch  bridge_interface.sch  fp-lib-table  main_board-cache.lib  main_board.csv  main_board.kicad_pcb  main_board.pro  main_board.sch  sym-lib-table
PCB/pico_probe/: fp-lib-table  pico_probe-cache.lib  pico_probe.csv  pico_probe.kicad_pcb  pico_probe.pro  pico_probe.sch  sym-lib-table
(+12 files in other folders)
